# microbit-v2-project-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
