[package]
name = "microbit-v2-project-template"
version = "0.1.0"
edition = "2021"

[dependencies.microbit-v2]
version = "0.13.0"
optional = true

[dependencies]
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }


[features]
v2 = ["microbit-v2"]